# Backend/routes/user.js
@@ -1,8 +1,8 @@
-const router = require("express").Router();
-const { signup, login, verify } = require("../controllers/userController");
+// const router = require("express").Router();
+// const { signup, login, verify } = require("../controllers/userController");
 
-router.post("/signup", signup);
-router.post("/login", login);
-router.post("/verify", verify);
+// router.post("/signup", signup);
+// router.post("/login", login);
+// router.post("/verify", verify);
 
-module.exports = router;
+// module.exports = router;
